--- a/md/#1 周其仁「汇率评论」笔记.md
+++ b/md/#1 周其仁「汇率评论」笔记.md
@@ -61,4 +61,39 @@
 
 ## 汇率评论之四：央行负债的经济性质
 
-- 2009 年 12 月为例：央行的总资产为 22.7530 万亿人民币，而
+- 2009 年 12 月为例：央行的总资产为 22.7530 万亿人民币，而央行的「自有资金」仅为 219.75 亿人民币。这就是说，每 1000 元央行的资产，有 999 元以上来自于负债。
+- 央行的自有资金就算全部来自于财政拨款，也不过区区 200 多亿人民币。
+- 为什么央行有如此之高的负债率，却依然安然无恙？央行是政府开的，只要财政可靠，央行的资产负债就无需大家操心。
+- 央行负债的最大头 — 「储备货币」，也就是「基础货币」，主要来自于两方面：
+  - 货币发行
+  - 金融机构存款
+- 像美联储和德国央行，至今还储备着全球为数可观的黄金，其实就是为他们货币的国家信用作保。没有多少黄金储备的央行，直接以国家权利作为发钞的抵押之物。
+- 理论上，央行只要不降低法定准备金率，「金融机构存款」就可以锁定而无须归还。
+- 央行总可以积淀下相当一笔无须归还的负债。再说了，实在到了非还不可的时候，央行反正还有增发货币的杀手锏。
+
+## 汇率评论之五：如此辛苦为哪般
+
+- 2009 年 12 月央行总资产 22.8 万亿人民币，其中最大项为外汇资产，达 17.5 万亿人民币（即 2.5 万亿美元），占 76.8%；加上货币黄金和其他，央行的国外资产达 18.5 万亿，占总资产的 81.1%，中国外汇储备天下第一。
+- 央行不能不忙着举债，因为不扩大举债，央行就没有能力在外汇交易中心大手收购越来越多的进入中国的外汇。
+- 央行很忙，因为要维持人民币币值的稳定。一方面发行货币导致人民币贬值，所以另一方面又需要忙着「回收流动性」，如发央票、增加法定准备金、提升利息等。
+
+## 汇率评论之六：汇率稳定与币值稳定的纠葛
+
+- 在历史上，各主要货币之间由币值都稳定而带来的汇率稳定，真的发生过。这就是 19 世纪到 20 世纪初的「黄金时代」，全世界主要国家都实行了货币的金本位制。
+- 金本位的基石 — 政府和货币当局信守货币承诺，确保发行的货币可以平价兑换黄金 — 常常受到多种压力而动摇。
+- 各主要货币的币值稳定是汇率稳定的前提和基础。币值稳定一旦动摇 ，汇率稳定也随之摇晃。这绝不是因为汇率稳定本身不重要、意义不伟大，而就是因为做不到。
+
+## 汇率评论之七：守不住的固定汇率
+
+- 固定汇率受不住的根本原因，是参与国家贸易来往的各国，受不住各自货币币值的稳定。更准确地说，是因为相关各国做不到同步维系币值的稳定。
+- 19 世纪以英镑中心的金本位，二次大战后以美元为中心的布雷顿森林体系，都是因为这个同样的原因而撑不下去的。
+
+##汇率评论之八：固定汇率与浮动汇率之争 
+
+- 曾经的布雷顿森林体系 — 美元挂黄金、各国货币以固定汇率挂美元 — 似乎如日中天，但 1950 年弗里德曼发表的「浮动汇率论」却直指该体系的要害，即固定汇率会传递通胀，引发危机。
+- 弗里德曼的结论很明白：货币稳定靠不住，所以非浮动汇率不可取。
+- 从优势上看，一体化货币 > 浮动汇率 > 固定汇率，然后「一体化货币」并不现实。
+
+##汇率评论之九：当代庞统的连环策 
+
+​	
