--- a/md/#1 周其仁「汇率评论」笔记.md
+++ b/md/#1 周其仁「汇率评论」笔记.md
@@ -96,4 +96,70 @@
 
 ##汇率评论之九：当代庞统的连环策 
 
-​	
+- 固定汇率的劣根性在于，一旦被掩蔽的货币不稳定的本性发作，被固定汇率连为一体的经济，反而遭受更大的危机冲击。
+- 以美元为锚的东亚货币政策，的确带来了曾经的「东亚发展奇迹」。但固定汇率也是造成 1997 年亚洲金融危机的重要的因素之一。
+- 亚洲金融危机过后的 10 年，全球金融危机来了。此次危机的爆发地点是美国，也就是那个为全球、亚洲与中国提供稳固的货币之锚的国家。
+- 固定汇率主张就是当代的连环策。客观衡量，用固定汇率把多国货币连成一体，正如用铁环把多个摇晃的船只连成一体，当然有很多好处。问题是获取好处要不要付出代价，而更致命的问题是所有收益成本得以实现的关键约束条件。
+
+## 汇率评论之十：这世界刮的是什么风
+
+- 这世界刮的是财政赤字风。美国是全球经济规模最大的国家，其财政赤字总额也绝对是全球老大。
+
+- 当今由美国、欧洲、日本组成的发达世界，政府统统超高额负债。
+
+- 历史经验说，高额负债的国家因为承受不了缩减财赤的短期痛苦，很容易倾向通过货币贬值来“化解”政府债务。
+
+  *（道理简单：货币币值的缩水可以直截了当地勾销公共债务）*
+
+- 这样，由货币控制带来的高额政府负债，反过来就以货币贬值威胁货币体系的稳定。19 世纪的金本位就是这样解体的，20 世纪以美元为本位的布雷顿森林体系也是这样动摇的。
+
+## 汇率评论之十一：人民币不能以美元为锚
+
+- 从中国这方面看，出口厂商都是花人民币购入生产要素，做成产品再以美元计价出口（这里略去其他国际结算货币不谈）。
+- 美国那方面的情形不同。美国出口商花费的是美元成本，做出的产品也以美元计价出口，前后横竖都用一个货币。
+- 假使全球的货币都以美元为锚，可美元本身又以什么为锚？
+- 把美国比为海上的一艘超级巨轮，然后就想当然地主张，全球所有其他小舢板和大小船只，只要以固定汇率之钩挂住美国超级巨轮，就等于给所有货币找到了最可靠之锚？
+- 一旦超级巨轮像当年的泰坦尼克号那样不幸触礁下沉，它还可能把本来还可以各自逃生的大船小船一股脑儿地拖到大洋的底部。
+- 除非美元有可靠之锚，否则人民币不能以美元为锚。
+
+## 汇率评论之十二：美元之锚的历史变化
+
+- 历史上最可靠的美元之锚，是黄金与白银。
+- 美元铸币响当当地可靠，缺点是不那么方便。纸币应运而生
+- 曾经美元本身的含金量就是货币之锚。由金币券和银币券构成的纸币，不过是政府和银行依凭储备的金币银币开出的「借据」。
+- 由于存款人或持票人分分秒秒可以凭票兑换贵金属，这些纸币也等于以黄金白银为锚。
+- 大变化发生在1933年，美国在这一年废除了美元的金本位。
+- 美国虽然没有卷入第一次世界大战，却因此成为欧洲黄金避险的安全地带，大量的黄金流入讽刺性地造成美国的高通胀，以及接踵而来严重的通缩，被拖进了经济大萧条。
+- 至此，美国不再用黄金铸币，金币券也派不上用场。「法币」时代来临。美元成了货真价实的纸币，但此时美元钞票还守着一个法定的黄金市价。
+- 可问题是，此时美国的黄金市场上早已空无一人，因为美国人民再不能合法地拥有、买卖黄金！美元之锚开始质变。
+- 1944年的布雷顿森林协定，不过是把上述「以法定黄金市价为锚」的美元推向了世界。
+- 但此后的美国发起了几次军事战争，巨额财赤超过了其收税的能力，所以还是得超发美元，以美元为中心的布雷顿森林体系寿终正寝。
+- 至此，美元不但脱开了黄金之锚，也脱开了“承诺的黄金平价”之锚，真正变成「法定不可兑现货币」。
+
+##汇率评论之十三：以央行行长为锚的货币制度 
+
+- 布雷顿森林体系结束之后，沃尔克认为还要下大决心治理美国国内的通胀，祸害的源头还是美元超量供给。
+
+- 这里的关键是，通胀不单是货币现象，而且还是公众的心理现象。人们预期未来还是高通胀，就会不断地以购买行为来保卫自己的财富，这样就使物价的持续上涨刺激更多的购买行为和更高的物价上涨。
+
+- 所以有效办法就是升息，因为利息的提高等于增加了消费行为的机会成本。
+
+- 沃尔克找到了破解困境的实际路径——美联储不再投票决定基准利率，转而直接制定美国货币供应量目标，然后经由市场过程，由货币供应量的变化决定利率的变化。
+
+  *（*这真是神来之笔：货币供应量当然决定着利率，美联储再也不需要为提升利率而直接面对政治紧张。*）*
+
+- 「以央行行长为锚」——或以任何其他人为机制为锚——的货币制度，不但不是偏离理想货币体制的例外，反而集中而醒目地反映了人类寻找可靠货币之锚的全部困难。
+
+
+
+## 汇率评论之十四：人民币当然要择善而从
+
+- 人民币从来就没有以黄金为锚。早在人民币诞生前的13年，明清以来行之多年的银两加铜钱的传统货币，就被国民党政府的法币所取代。
+- 随着国民党政府的垮台，人民政府接管了全国政权，也接管了中国大陆的货币发行权。回到金本位是不可能的了。
+- 人民币是例外。没有黄金储备做后盾、纯粹的纸币、新生革命政权的国家信用——但是人民币从开始之日起，就选择走稳健货币的路线。人民币以什么为锚？
+- 它的第一个 「锚」就是历史教训。前朝国民党政府留下的货币教训，足以让新中国的货币掌门人铭记在心。只用两招就把问题解决了。这也是对付通胀和通胀预期最基本的功夫：一是严控货币投放，二是加大商品供应。
+- 选锚之举为的是维系人民币的币值稳定，无论怎样打算盘，人民币应该择善而从。
+
+## 汇率评论之十五：人民币盯美元的由来
+
+- ​
