--- a/md/#1 周其仁「汇率评论」笔记.md
+++ b/md/#1 周其仁「汇率评论」笔记.md
@@ -162,4 +162,35 @@
 
 ## 汇率评论之十五：人民币盯美元的由来
 
-- ​
+- 人民币一动不动盯住美元，在两个历史时段发生过。第一时段是 1955 - 1970 年，15 年期间以 4.618 元兑 1美元的汇率没有一分一毫的变动。这一阶段，表达了国家以低成本掌控稀缺外汇资源的政策意图。不过事与愿违，明显高估的人民币导致抑制外汇供给。
+- 第二时段是 1998 - 2005 年，以几乎不变的汇率（8.27）持续了 7 年。这一阶段的结果，与其说是依据了哪派理论而设计出来的产物，不如说是一连串事件合成的结果。
+- 具体讲，主要是三大事件：1993 年又一波高通胀和随之而来的通胀治理；1994 年中国第一波汇改；1997 年亚洲金融风暴。
+- 1993 年中国的物价指数过 16%，1994 年冲到 24%，通胀来势汹汹。邓小平支持朱镕基下痛手治通胀。结果是三年之内物价指数降为 2.8%。
+- 1994 年的另外一件大事，是完成两种汇率的并轨，前文也提到过。在统计上，1993年人民币对美元之价为5.76，1994年为8.61。
+- 到1997 年亚洲危机爆发，中国背黑锅，被说亚洲金融危机是人民币大幅贬值引起的。虽然与事实不符，中国却必须承担应对亚洲危机的大国责任。具体讲，就是承诺人民币不贬值。当时中国政府承诺了，也做到了。
+- 于是我们就看到，从 1998 年起人民币对美元的汇率成为多年不变的平线一条。
+- 因此，1998 年后人民币对美元汇率不变，既不是中国汇改的既定目标，也不是立法根除通胀为人民币主动选锚的结果，只是一个巧合。
+
+## 汇率评论之十六：被动超发货币的教训
+
+- 早先，政府因财政压力而超发货币，是法定货币时代通胀的根源。只是1994 年全国人大通过、1995 年开始执行的《人民银行法》改变了这一局面。该法案明文限定，人民银行再也不得对政府财政透支。以后政府的财政需要，只能靠税收、靠发债、靠国有资源的收益，再也不能靠超发票子。
+- 始料不及的是，主动超发货币之门被关上之后，又开出了一个被动超发货币的口子。因为每年新增的国家外汇储备，全部是央行用基础货币买进来的。这是说，人民币汇率的形成机制，在事实上已经成为货币当局被动发行人民币的机制。
+- 年度新增外汇储备的绝对量从 465 亿美元（2001）、742 亿美元（2002）、1168 亿美元（2003），直到2066 亿美元（2004）；年增长率则分别跳到 28%、34%、40%和 51%。这样的形势真叫好得受不了，因为由此形成的人民币供应压力远高出经济增长的需要，不是「货币超发」，还能是什么？
+- 问题出现了，外贸赚回来的大量外汇，经过央行购汇之后，全部变成了留在国内的新增人民币，然而完全没有对应的商品可买，到底靠什么来平衡？
+
+## 汇率评论之十七：出口导向带给国内的麻烦
+
+- 这就是数目日益庞大的贸易顺差，给国内经济平衡带来了困难。每年中国大量商品净出口，但是生产这些商品所获得的货币收入，却留在了国内。
+- 所有这些创造了净出口商品与劳务而挣得的收入，对国内市场究竟发生什么样的影响？讲过的，不是小数，而是每年以万亿为单位计算的大数。
+- 过量货币追逐不够量的商品劳务的现象就可以被观察到，结果就是物价的普遍上涨——通胀是也。
+- 剩下还有什么出路吗？那就增加储蓄吧。然而储蓄越多，市场货币与商品劳务之间的不匹配就越严重。
+- 这不是什么深奥的学问：如果你我把钱存到银行，那银行是要把钱贷放出去才可以维持下去的。随着存入-贷出次数的增加，更大量的货币被银行创造出来之时，就是过量货币追逐不足量商品的矛盾变得更为严重之际。
+
+## 汇率评论之十八：水多了加面
+
+- 中国这些年的经验说明，即使在法律上制止了主动超发票子，「被动超发」甚至可以造成更为严重的市场压力。
+- 有什么出路吗？有的。这出路不是别的，就是将原本不在市场里、不受价格机制支配的资源，拉到市场里来，任由人们买来买去，由资源转化而成的商品就需要货币来流通了。
+- 这些年市价波动出大状况的商品，诸如曾经的生猪、房地产和人工，还有蔬菜等等，多少都类似木头 —— 造物主赋予它们很高的价值、需求上有空间、过去又从未趟入市场之河。这绝不是偶然的。
+
+## 汇率评论十九：“货币深化”与改革的风风雨雨
+
