--- a/md/#1 周其仁「汇率评论」笔记.md
+++ b/md/#1 周其仁「汇率评论」笔记.md
@@ -194,3 +194,35 @@
 
 ## 汇率评论十九：“货币深化”与改革的风风雨雨
 
+- 19 世纪美国天文学家西蒙·纽康提出货币数量论：MV=PQ，变量含义如下：
+  - 物价（P）
+  - 商品与劳务量（Q）
+  - 货币供应量（M）
+  - 货币周转率（V）
+- 经验验证了该论调在整体上的正确性。
+
+## 汇率评论之二十一：货币老虎越养越大
+
+- 2010 年 8月份公布的 M2 为 68.8 万亿人民币，有可能等于年度 GDP 的200%上下。GDP是流量，代表一年之间新创造的国民生产总值。一个经济转起来的时候，需要多少货币参与其中，流量与存量之间总有一个合适的比例。
+- 不少发达国家的货币指数 （即广义货币占 GDP 之比），先是由低向高发展，但一般过不了 100% 就掉头向下，整体上呈现出一个倒 U 字的图形。中国越来越高的货币占 GDP 之比，究竟是怎么形成的？
+- 在货币供给方面，最重要的线索就是从「主动超发」转向「被动超发」。中国正式加入WTO之后，形成了巨额的贸易出超，结果被动地向国内市场投放过量货币。最糟糕的组合，就是既听任货币被动超发、又在市场化改革方面畏首畏尾、裹足不前。
+
+## 汇率评论之二十二：加息的不同含义
+
+- 当通胀压力增加，或者资产市场价格陡然上升之际，央行加息就成为一招应对之道。然而美国和中国的加息是不同的制度。
+- 美联储的加息政策，主要指两方面：一是「贴现率」，即各成员银行以尚未到期的票据向美联储要求兑现时，美联储要求支付的贴现利率；二是「联邦储备基金利率」，即那也是商业银行向联储借贷的利息。
+- 很清楚，美联储的 「加息」，无论加贴现利率还是加联储基金利率，调节的都是商业银行与央行的借贷关系。如果商业银行从联储得到钱变贵了，那么商业银行可放贷数目就减少，商贷款利息就会变高。
+- 中国的制度环境不同，「中国式加息」是央行直接调节金融机构与客户的关系，而不是调节央行与金融机构的关系。央行说得清楚，上调的是 「金融机构人民币存贷款基准利率」。
+- 央行之所以能够直接干预金融机构的存贷利率，是因为利息管制尚存，也就是 「市场化利率」的体制还没有实现。
+- 本来过多货币供给形成的利息率变动，天生就会先降后升。阶段如下：
+  - 1、货币过大，导致币值贬值，利息也下跌，对货币的需求量上升；
+  - 2、当利率跌到物价指数之下时（负利率），此时借钱不但可保值，还有机会升值（赚利差）；
+  - 3、此时，借钱需求旺盛、存款意愿下降，竞争的力量会把存贷利率一起推高。
+- 正而高的利率，不过有助于抑制高通胀预期可能转为恶性通胀的几率，但并没有根除通胀压力。
+
+
+
+## 汇率评论之二十三：央行与商业银行的关系
+
+- 如果中国式加息收紧的是毛细血管的货币流量，那么美国加息直接压缩了货币动脉的供血量。
+- ​
