--- a/md/#1 周其仁「汇率评论」笔记.md
+++ b/md/#1 周其仁「汇率评论」笔记.md
@@ -225,4 +225,17 @@
 ## 汇率评论之二十三：央行与商业银行的关系
 
 - 如果中国式加息收紧的是毛细血管的货币流量，那么美国加息直接压缩了货币动脉的供血量。
-- ​
+- 央行通过两条货币动脉与商业银行相连。一条是「最后贷款人」的角色，另一条是通过不断以基础货币在外汇交易中心购买外汇来进行的。如此特别的「双动脉货币循环」，单靠加息或者降息不足以实施有效的调节。
+- 先说「最后贷款人」，在中国央行的态度是「建设性模糊」的。如果最后贷款人不在事前把自己的责任讲得那么明白，也许可以让市场里的行为者好自为之，从而对付最后贷款人存在下的道德风险。
+- 今天威胁人民币币值稳定的压力，主要来自所谓「第二货币动脉」，即央行为了人民币汇率目标，不断动用基础货币在中国外汇交易中心大手购汇，从而源源不断地向商业银行注入流动性。
+- 所以在中国背景里看问题，加息的作用与空间都有限。
+
+## 汇率之二十四：黄金管得住超发货币的冲动吗
+
+- 作为斯密认定的天生倾向交易的动物，人们需要交易媒介（货币），又担心货币币值不稳定损害交易的进行，这一种「怕痛」心理，引发了不断寻找更可靠、更保值货币的持续努力。
+- 但是，在某些情况下，超发货币——让货币贬值——也同样成为减轻短期疼痛、避免经济调整代价过大的一种手法。
+- 当企业破产、机构转型、工人失业和政府从现存经济结构收取的税收和其他利益的难度陡然加大，超发票子能够减少 “结构改革”的痛苦的时候，「准则至上、不通人情」的金本位就容易遭到唾弃。
+
+
+
+​						*（注：该系列总共 30 篇，选择了前 24 篇）*
